--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,8 +3,6 @@ name: Build
 on:
   push:
     branches: [ "main" ]
-    tags:
-      - '*'
   pull_request:
     branches: [ "main" ]
 
@@ -51,10 +49,10 @@ jobs:
 #       with:
 #         asset_paths: '["./bin/crude*"]'
 
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.0
-      with:
-        # Artifact name
-        name: crude
-        path: bin/*
+    # - name: Upload a Build Artifact
+    #   uses: actions/upload-artifact@v3.1.0
+    #   with:
+    #     # Artifact name
+    #     name: crude
+    #     path: bin/*
 
